bug squash

--- a/anvio/data/interactive/css/error.css
+++ b/anvio/data/interactive/css/error.css
@@ -23,7 +23,7 @@ h1,h2{
 }
 
 .dropdown-category{
-    width: 700px;
+    width: 900px;
     height: 50px;
     border-style: solid;
     border-width: 3;
@@ -33,7 +33,7 @@ h1,h2{
 
 .dropdown-content > p {
     font-size: 25px;
-    width: 700px;
+    width: 900px;
 
 }
 
